# dfs

./: .gitignore  Cargo.toml
dfs/: Cargo.toml
dfs/src/: config.rs  dfs_struct.rs  dir_entry.rs  index.rs  lib.rs  root.rs  test.rs
dfs/src/global_store/: heed_store.rs  mod.rs
dfs/src/peer/: mod.rs
dfs/src/root/: dir_entry.rs  index.rs  mod.rs
dfs/src/root/local_store/: heed_store.rs  mod.rs  sled_store.rs
dfs/src/root/local_store/sqlite/: mod.rs
