[package]
name = "dfs"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.39.1"
log = "0.4.14"
bincode = "1.3.3"

heed = "0.11.0"
sled = "0.34.7"
rusqlite = "0.26.0"

uuid = {version="0.8.2", features=["v4", "serde"]}
thiserror = "1.0.29"
serde = {version = "1.0.130", features=["derive"]}
tokio = {version="1.12.0", default-features=false, features=["fs", "sync", "rt", "macros", "time"]}
pathdiff = "0.2.1"
temp_testdir = "0.2"

[dev-dependencies]
env_logger = "0.9.0"
tokio = {version="1.12.0", default-features=false, features=["fs", "sync", "rt-multi-thread", "macros", "time"]}

